syntax = "proto3";

package user;

option go_package = "user-service/proto;proto";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string password = 5;
  string email = 6;
  string country = 7;
  string created_at = 8;
  string updated_at = 9;
}

message UserID {
  string id = 1;
}

message UserFilter {
  string first_name = 1;
  string last_name = 2;
  string nickname = 3;
  string country = 4;
}

message ListUsersRequest {
  UserFilter filter = 1;
  int64 page = 2;
  int64 page_size = 3;
}

message ListUsersResponse {
  repeated User users = 1;
}

message Empty {}

service UserService {
  rpc CreateUser(User) returns (UserID);
  rpc GetUser(UserID) returns (User);
  rpc UpdateUser(User) returns (Empty);
  rpc DeleteUser(UserID) returns (Empty);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}